kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-bot-admin
spec:
  selector:
    app: discord-bot-admin
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
