kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord-bot-admin
  labels:
    route53: discord-bot-admin
spec:
  rules:
    - host: "discord-bot-admin.zgamelogic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discord-bot-admin
                port:
                  number: 3000
  tls:
    - hosts:
        - "discord-bot-admin.zgamelogic.com"
      secretName: ingress-tls
